# ship

./: .gitignore  HISTORY.rst  LICENSE.txt  README.rst  pyproject.toml  setup.py
ship/: Pipfile
ship/examples/map/: app.py
ship/examples/map/static/css/: style.css
ship/examples/map/templates/: index.html
ship/rawdata/: 2019_eu.csv  2019_towns.csv
ship/tests/: test_db.py
